@@ -3,6 +3,8 @@ Changelog
 
 6.6-dev - (unreleased)
 ----------------------
+* Change: refactor marshaller.py to conform to eea.versions API changes
+  [tiberich #14008]
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
   upgrade button available for EEA Content Types
   [voineali refs #9552]
